# mk-language

./: .gitignore  BRAIN.md  CAPABILITIES.md  CAPABILITIES.prev.md  CAPABILITIES.v02.md  COMPLETE.md  CONTRIBUTING.md  DEVELOPMENT.md  EXP2-DESIGN.md  MONITOR.md  NOTE-FOR-DEEPSEEK.md  OBSERVATIONS.md  PROGRESS.md  PROGRESS.v02.md  RALPH_GOALS.md  RALPH_GOALS_2.md  README.md  SPEC.md  TRANSCRIPT.md  V03-PLAN.md  V03-STATUS.md  VISION.md  _sandbox_shell.py  _verify_all.py  additional_features.md  agentic_features.md  asg.py  attempts.jsonl  backfill_attempts.py  capabilities.json  council.py  dashboard.out  dashboard.py  distill.py  distill_router.py  eval_challenges.json  eval_challenges_v3.json  evolve.py  export_corpus.py  generate_triples.py  (+46 more)
.claude/: mcp-servers.json  settings.json
.claude/agents/: cc2-visualizer.md
.github/workflows/: ci.yml
.kinox/sessions/: 0b8b842c363a.json  1c4f0d3ff1b0.json  1fb193ed750c.json  2861805c40de.json  36fb493b7cd7.json  565c42c19ac4.json  7aeb26c17233.json  860b72fc1727.json  99f042326c6b.json  ac99cf26acfe.json  b090a0489196.json  e9730f8c9645.json  fec5f65f4a5a.json
adapters/: claude_code.py  guard.py
adapters/standard_skills/: __init__.py  compact.py  export.py
alignment/: AXIOMS.md  CLAUDE.md  CONSTITUTION.md  PREAMBLE.md
corpus/: INDEX.md  summary.json
daemon/: backends.py  backoff.py  brain.py  doctor.py  exec.py  fallback.py  guardian.py  hooks.py  launch.py  mcp.py  outbox.py  ratelimit.py  registry.py  remote_auth.py  resources.py  scoring.py  secrets.py  serializer.py  server.py  streaming.py  tracing.py  watchdog.py
deploy/cluster/: beacon-run.sh  ollama-daemonset.yaml
deploy/swarm/: .gitignore  AGENTS.md  eval_jobs.json  extract_eval.py  gen_eval_jobs.py  push_alignment.sh  swarm.py
distill_index/: metadata.jsonl
docs/: ._chapter_1.txt  chapter_1.txt  origin-braindump.txt  session-report-2026-06-23.md
evals/: checkers.py  evolve.py  execute.py  runner.py  schema.py  store.py  synth.py
evals/tasks/: agent-step-efficiency.json  agent-tool-correctness.json  broker-fallback-chain.json  broker-multi-backend.json  correction-detected.json  cost-budget-local.json  fail-closed-guard.json  fail-soft-optimizer.json  groom-context-git.json  groom-deslop-no-filler.json  groom-expand-path.json  groom-judged-annotation.json  groom-tag-intent.json  guard-leaked-api-key.json  guard-redteam-obfuscated-rmrf.json  guard-redteam-path-traversal.json  guard-redteam-pipe-to-shell.json  guard-redteam-privilege-escalation.json  guard-redteam-prompt-injection.json  guard-refuse-protected-write.json  guard-refuse-rm-rf.json  manifest-null-not-false.json  outbox-append-then-mark.json  redact-api-key.json  redact-jwt-token.json  redact-no-secret.json  redact-openai-key.json  redact-password.json  router-deterministic-git.json  router-deterministic-redact.json  router-fuzzy-local.json
kernel/: contracts.py  corrections.py  jsonutil.py  manifest.py  metrics.py  router.py  tracing.py
products/: theme.py
products/agent/: __init__.py  acp_server.py  budget.py  command_safety.py  config.py  coordinator.py  dag.py  environment.py  loop.py  nlp_hooks.py  permission.py  planner.py  rails.py  sandbox.py  session.py  tools.py
products/beacon/: GOALS.md  __init__.py  axioms.py  bible.py  challenges.py  harness.py  ledger.py  monitor.py  server.py
products/capabilities/: __init__.py  arity.py  registry.py
products/chat/: __init__.py  app.py  output.py  session.py
products/cli/: commands.py
products/dashboard/: aggregate.py  app.py  config.py  statusline.py  streamlit_app.py
products/evolve/: __init__.py  challenge.py  loop.py
products/feedback/: loop.py  review.py
products/groom/: config.py  ingest.py  model_tag.py  pipeline.py  tag.py
products/launcher/: __init__.py  app.py  menu.py  sync.py
products/remote/: __init__.py  server.py
products/telemetry/: __init__.py  otel.py
projects/language/: _sandbox_run.py  cheatcode_aios_nl_os.md  council.py  dashboard.py  run.py
rounds/: round-0000.json  round-0001.json  round-0002.json  round-0003.json  round-0004.json  round-0005.json  round-0006.json  round-0007.json  round-0008.json  round-0009.json  round-0010.json  round-0011.json  round-0012.json  round-0013.json  round-0014.json  round-0015.json  round-0016.json  round-0017.json  round-0018.json  round-0019.json  round-0020.json  round-0021.json  round-0022.json  round-0023.json  round-0024.json  round-0025.json  round-0026.json  round-0027.json  round-0028.json  round-0029.json  round-0030.json  round-0031.json  round-0032.json  round-0033.json  round-0034.json  round-0035.json  round-0036.json  round-0037.json  round-0038.json  round-0039.json  (+182 more)
tests/: conftest.py  test_adapter.py  test_agent_budget.py  test_agent_config.py  test_agent_coordinator.py  test_agent_environment.py  test_agent_loop.py  test_agent_planner.py  test_agent_rails.py  test_agent_stream.py  test_agent_tools.py  test_architecture.py  test_backoff.py  test_beacon.py  test_brain.py  test_broker_backends.py  test_broker_exec.py  test_broker_fallback.py  test_broker_launch.py  test_broker_registry.py  test_broker_resources.py  test_broker_scoring.py  test_broker_serializer.py  test_broker_server.py  test_broker_tracing.py  test_capabilities.py  test_chat_app.py  test_chat_output.py  test_chat_session.py  test_chat_stream.py  test_cli_commands.py  test_command_safety.py  test_contracts.py  test_corrections.py  test_dashboard_aggregate.py  test_dashboard_app.py  test_dashboard_config.py  test_doctor.py  test_eval_cheats.py  test_eval_checkers.py  (+47 more)
tests/eval/: test_annotation_halt.py  test_context.py  test_corrections.py  test_event_record.py  test_expand.py  test_groom_pipeline.py  test_manifest_null.py  test_metrics_sink.py  test_redact.py  test_router_fuzzy.py  test_router_ground_truth.py  test_schema.py  test_task_contract.py  test_tier_factory.py
tools/: catch-kx-writer.sh  deploy-dashboard.sh  kx-council.service  kx-ui.pid  kx-ui.service  kx-writer-catch.service  kx-writer-daemon.sh
tools/guard/: dev-guard.sh
tools/hooklog/: rtk-hook-logged.sh  (+1 more)
(+21 files in other folders)
