[project]
name = "kinox"
version = "0.9.0"
description = "A local-first, governed, cost-efficient workspace for running coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
# Kernel is dependency-light by design (vision §4). Runtime deps are added per
# product/adapter as they earn their place — never speculatively.
dependencies = [
    # OS-enforced filesystem jail for agent shell subprocesses. Linux-only —
    # Landlock is a Linux LSM; on other platforms the sandbox fails soft to the
    # lexical guard, so this dependency is platform-gated and never blocks a
    # non-Linux install.
    "landlock>=1.0.0.dev5; sys_platform == 'linux'",
]

[project.optional-dependencies]
# The broker daemon (M1) — the kernel stays stdlib-only; these live in the
# outer layer only and are NEVER imported from kernel/ (see test_architecture.py).
daemon = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "psutil>=7.2.2",
]
dashboard = [
    "rich>=15.0.0",
]
# Document ingest for the groom pipeline (products/groom/ingest.py). markitdown
# (PDF/DOCX/PPTX/XLSX/HTML/image → markdown) is optional: the stage fails SOFT
# when it is absent, so a plain install still grooms — it just can't convert
# attached documents. Outer-layer only; never imported from kernel/.
groom = [
    "markitdown>=0.0.1a2",
]
# The launcher hub (the default working environment) — questionary for the
# arrow-key menu selection, rich (above) for the header. Outer-layer only.
tui = [
    "questionary>=2.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    # The daemon + dashboard + tui extras are exercised by the test suite (and by
    # `kx status` / the launcher hub), so they must be present in the dev
    # environment for a plain `uv sync` (e.g. install.sh) to leave it working.
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "psutil>=7.2.2",
    "rich>=15.0.0",
    "questionary>=2.0",
]

# No [build-system]: kinox is an application, not a published library. uv manages
# the environment; the top-level packages (kernel/ products/ adapters/ daemon/)
# are imported directly from the repo root. Extraction of `kernel` into a
# versioned package later is mechanical because of the import-isolation rule.

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["kernel", "products", "adapters", "daemon", "tests"]
# `kx` is an extensionless Python entrypoint — lint it too so its code is gated
# (it isn't picked up by the default *.py discovery). `kin` is bash, not Python.
extend-include = ["kx"]
# Vendored skill scripts under .claude/ are not project code — don't lint them.
exclude = [".claude", ".venv", "var"]

[tool.ruff.lint]
# Sensible, strict-but-not-noisy default. Expand deliberately.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# server.py is ~90% one embedded dashboard asset (the `PAGE` HTML/CSS/JS
# string). Its long lines are deliberately minified markup, not code to wrap —
# breaking them would corrupt JS template literals for zero readability gain.
"products/beacon/server.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["kernel", "products", "adapters", "daemon", "tests", "kx"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
